force-app/main/default/objects/SGN_User__c/SGN_User__c.object-meta.xml
<CustomObject>
    <label>Signature User</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signature Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>