force-app/main/default/objects/SGN_User__c/fields/SGN_DATET_Completed__c.field-meta.xml
<CustomField>
    <fullName>SGN_DATET_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed Date</label>
    <type>DateTime</type>
</CustomField>