force-app/main/default/objects/SGN_User__c/fields/SGN_ELCK_RelatedSign__c.field-meta.xml
<CustomField>
    <fullName>SGN_ELCK_RelatedSign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Signature</label>
    <referenceTo>SNG_Payment__c</referenceTo>
    <relationshipLabel>Signature Users</relationshipLabel>
    <relationshipName>Signature_Users</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>