force-app/main/default/objects/SGN_User__c/fields/SGN_ELCK_RelatedUser__c.field-meta.xml
<CustomField>
    <fullName>SGN_ELCK_RelatedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Signature_Users</relationshipName>
    <type>Lookup</type>
</CustomField>