force-app/main/default/objects/SGN_User__c/fields/SGN_TXT_GlobalId__c.field-meta.xml
<CustomField>
    <fullName>SGN_TXT_GlobalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Global Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>