force-app/main/default/objects/SGN_User__c/fields/SGN_TXT_LocalId__c.field-meta.xml
<CustomField>
    <fullName>SGN_TXT_LocalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Local Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>