force-app/main/default/objects/SGN_User__c/fields/SNG_OTP_ID__c.field-meta.xml
<CustomField>
    <fullName>SNG_OTP_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OTP ID</label>
    <type>TextArea</type>
</CustomField>